syntax = "proto2";

package status_streaming;

message HostAdvertisement {
    // Main port used for this host:
    // - The port on which the host listens for client data requests.
    // - Group-id of the source-specific multicast address used for sending data and vis advertisements
    required uint32 instance_port = 1;
    optional string hostname = 2;
    optional string yellow_team_name = 3;
    optional string blue_team_name = 4;
    optional bool is_live = 5;
    optional bool supports_unicast = 6;
}

message VisAdvertisement {
    repeated VisMapping visualization = 1;
}

message VisMapping {
    required string name = 1;
    required uint32 id = 2;
}

message DataRequest {
    repeated uint32 visualization_id = 1;
    optional uint32 unicast_data_port = 2;
    optional uint32 unicast_vis_ad_port = 3;
}
